--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### MAVEN Build ###
+/target/
+
 ### STS ###
 .apt_generated
 .classpath
@@ -35,3 +38,10 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### ETC ###
+.DS_Store
+application-local.yml
+
+
+/.idea/
