1차 머지 전 브랜치등록

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,42 @@
+logging.level.org.springframework=debug
+logging.level.org.springframework.web= debug
 
+server.servlet.context-path=/
+server.port: 8080
+
+# MariaDB 연동 부분 설정
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/instagram?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=admin
+
+#mybatis
+mybatis.type-aliases-package=h.project.dao
+mybatis.mapper-locations=mapper/*.xml
+
+#Redis 설정
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+#thymeleaf 경로 설정
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache=false
+#spring.thymeleaf.check-template-location=true
+
+#kakao 소셜 회원가입 정보
+#registration
+spring.security.oauth2.client.registration.kakao.client-id=REST API 키
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.kakao.client-authentication-method=post
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+
+##provider
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=kakao_account
