1차 머지 최종

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.org.springframework.web= debug
 server.servlet.context-path=/
 server.port: 8080
 
-# MariaDB 연동 부분 설정
+# MariaDB ì°ë ë¶ë¶ ì¤ì 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/instagram?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
@@ -14,12 +14,12 @@ spring.datasource.password=admin
 mybatis.type-aliases-package=h.project.dao
 mybatis.mapper-locations=mapper/*.xml
 
-#Redis 설정
+#Redis ì¤ì 
 spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 
-#thymeleaf 경로 설정
+#thymeleaf ê²½ë¡ ì¤ì 
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -27,16 +27,34 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 #spring.thymeleaf.check-template-location=true
 
-#kakao 소셜 회원가입 정보
-#registration
-spring.security.oauth2.client.registration.kakao.client-id=REST API 키
-spring.security.oauth2.client.registration.kakao.client-name=kakao
-spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
-spring.security.oauth2.client.registration.kakao.client-authentication-method=post
+#kakao 연동 정보
+spring.security.oauth2.client.registration.kakao.client-id=13396affec7c4b602ce59a9d9be4c8df
+spring.security.oauth2.client.registration.kakao.client-secret=3o9qmFBiHKrgzgKWsdcApPCio8b5j9Ze
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email,profile_image,gender
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 
-##provider
-spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+#kakao provider 등록 정보
+spring.security.oauth2.client.provider.kakao.authorization-uri= https://kauth.kakao.com/oauth/authorize
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
-spring.security.oauth2.client.provider.kakao.user-name-attribute=kakao_account
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+#facebook
+##앱ID
+#spring.security.oauth2.client.registration.facebook.client-id=527316975006896
+##앱 시크릿 코드
+#spring.security.oauth2.client.registration.facebook.client-secret=532b6844dcc14809b9f4b38bbce85a7c
+#spring.security.oauth2.client.registration.facebook.scope=public_profile,email
+#spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=email,name,locale
+
+#Google
+spring.security.oauth2.client.registration.google.client-id=532332959063-ar1ceop8aua1gn3fjj14miitq1snmd4q.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=6bSLTxs_uKILc5N7mVzBFM8r
+spring.security.oauth2.client.registration.google.scope=profile,email
+
+
+
+
