--- a/build.gradle
+++ b/build.gradle
@@ -19,42 +19,48 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	
 	implementation 'org.springframework.boot:spring-boot-starter-quartz'
+	
+	//Spring Security 사용을 위해
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 	implementation 'org.springframework.kafka:spring-kafka'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	
+	//View에서 현재 로그인된 사용자의 정보를 가져오기 위해
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-	//21/08/13 추가
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	
-	//21/11/09 추가
-	implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.5.RELEASE'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-	
+	//Lombox 사용을 위해 
 	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
+	
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.h2database:h2'
+	
+	//Mariadb 설정
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	
-	// https://mvnrepository.com/artifact/net.sourceforge.nekohtml/nekohtml
-	implementation 'net.sourceforge.nekohtml:nekohtml:1.9.14'
-	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+	//mybatis 설정
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+	runtimeOnly 'mysql:mysql-connector-java'	
+	//redis 설정
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	//embedded-redis 설정
+	implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.1'
+	//oauth2를 통한 로그인 설정
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	
+	//타임리프 사용을 위해
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	
 	
 }
