--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=admin
 
 #mybatis
 mybatis.type-aliases-package=h.project.dao
-mybatis.mapper-locations=mapper/*.xml
+mybatis.mapper-locations=mappers/*.xml
 
 #Redis ì¤ì 
 spring.cache.type=redis
@@ -25,7 +25,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
-#spring.thymeleaf.check-template-location=true
+spring.thymeleaf.check-template-location=true
 
 #kakao 연동 정보
 spring.security.oauth2.client.registration.kakao.client-id=13396affec7c4b602ce59a9d9be4c8df
